test/conformance/chainsaw/validate/clusterpolicy/best-practices/disallow-latest-tag/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-bad
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:latest
