test/conformance/chainsaw/validate/clusterpolicy/best-practices/disallow-latest-tag/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-good
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
